# aln-syntax-core

./: Cargo.toml  LICENSE  README.md
docs/architecture/: overview.md
docs/security/: hex-stamp-spec.md
schemas/: resource.workload.row.v1.aln  security.ndm.v1.aln  security.sourze.policy.v1.aln
src/: lib.rs
src/validator/: mod.rs
tests/: schema_tests.rs
