[package]
name = "aln-syntax-core"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "Canonical ALN ontology definition, schema validation, and syntax generation"
license = "ASL-1.0"
repository = "https://github.com/aln-sovereign/aln-syntax-core"
documentation = "https://docs.rs/aln-syntax-core"
keywords = ["aln", "sovereign", "schema", "governance", "ndm"]
categories = ["cryptography", "encoding", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
nom = "7.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "aln_syntax_core"
path = "src/lib.rs"

[[bin]]
name = "aln-schema-gen"
path = "src/bin/schema_gen.rs"

[[bin]]
name = "aln-validator"
path = "src/bin/validator.rs"

[[bin]]
name = "aln-lint"
path = "src/bin/lint.rs"

[features]
default = ["std"]
std = []
full-introspection = ["cyberspectre-trace"]
cyberspectre-trace = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
